add syclop reference

--- a/references.bib
+++ b/references.bib
@@ -1864,6 +1864,24 @@
    issn = {1050-4729},
 }
 
+=== Manual ===
+@inproceedings{plaku2010syclop,
+   author = {Plaku, Erion and Kavraki, Lydia E. and Vardi, Moshe Y.},
+   title = {Motion Planning with Dynamics by a Synergistic Combination
+      of Layers of Planning},
+   journal = {Trans. Rob.},
+   volume = {26},
+   number = {3},
+   month = jun,
+   year = {2010},
+   issn = {1552-3098},
+   pages = {469--482},
+   numpages = {14},
+   doi = {10.1109/TRO.2010.2047820},
+   publisher = {IEEE Press},
+   address = {Piscataway, NJ, USA},
+}
+
 @phdthesis{pohl1969bidirectional,
    author = {Ira Pohl},
    title = {Bi-directional and Heuristic Search in Path Problems},
