clean up more references

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,13 @@
-@string{icra = "{IEEE} International Conference on Robotics and Automation"}
-@string{iros = "{IEEE} International Conference on Intelligent Robots and Systems"}
+@string{icra = "{IEEE} International Conference on Robotics and
+   Automation"}
+@string{iros = "{IEEE} International Conference on Intelligent Robots
+   and Systems"}
 @string{rss = "Proceedings of Robotics: Science and Systems"}
+@string{ijrr = "The International Journal of Robotics Research"}
+@string{isrr = "The International Symposium on Robotics Research"}
+@string{wafr = "International Workshop on the Algorithmic Foundations
+      of Robotics"}
+@string{tro = "IEEE Transactions on Robotics"}
 
 === From IEEE Xplore ===
 @inproceedings{aghamohammadi2011feedbackroadmaps,
@@ -34,7 +41,7 @@
 @article{aine2016truncatedincremental,
    author = {Sandip Aine and Maxim Likhachev},
    title = {Truncated Incremental Search},
-   journal = {Artif. Intell.},
+   journal = {Artificial Intelligence},
    issue_date = {May 2016},
    volume = {234},
    number = {C},
@@ -97,7 +104,7 @@
 
 === From IEEE Xplore ===
 @inproceedings{bagnell2012arms,
-   author = {Bagnell, J.A. and Cavalcanti, F. and Lei Cui
+   author = {J. Andrew Bagnell and Cavalcanti, F. and Lei Cui
       and Galluzzo, T. and Hebert, M. and Kazemi, M.
       and Klingensmith, M. and Libby, J. and Tian Yu Liu
       and Pollard, N. and Pivtoraiko, M. and Valois, J.-S.
@@ -113,11 +120,11 @@
 
 === From sagepub (IJRR) ===
 @article{barraquand1991distributedrepresentation,
-   author = {Barraquand, Jérôme and Latombe, Jean-Claude},
+   author = {J\'{e}r\^{o}me Barraquand and Jean-Claude Latombe},
    title = {Robot Motion Planning: A Distributed Representation
       Approach},
    year = {1991},
-   journal = {The International Journal of Robotics Research},
+   journal = ijrr,
    volume = {10},
    number = {6},
    pages = {628-649},
@@ -169,8 +176,8 @@
 
 === From sagepub (IJRR) ===
 @article{berenson2011tsrs,
-   author = {Berenson, Dmitry and Srinivasa, Siddhartha
-      and Kuffner, James},
+   author = {Dmitry Berenson and Siddhartha Srinivasa
+      and James Kuffner},
    title = {Task Space Regions: A Framework for Pose-Constrained
       Manipulation Planning},
    journal = {The International Journal of Robotics Research},
@@ -196,9 +203,9 @@
 @article{bettini2004fixtures,
    author = {Bettini, A. and Marayong, P. and Lang, S.
       and Okamura, A.M. and Hager, G.D.},
-   journal = {Robotics, IEEE Transactions on},
    title = {Vision-assisted control for manipulation using virtual
       fixtures},
+   journal = tro,
    year = {2004},
    month =  dec,
    volume = {20},
@@ -282,7 +289,7 @@
    author = {Michael S. Branicky and Steven M. LaValle and Kari Olson
       and Libo Yang},
    title = {Deterministic vs. Probabalistic Roadmaps},
-   note = {Submitted to IEEE Trans. on Robotics and Autamation},
+   note = {Unpublished},
    year = {2002},
 }
 
@@ -300,10 +307,10 @@
 
 === From sagepub (IJRR) ===
 @article{cambon2009hybrid,
-   author = {Cambon, St\'{e}phane and Alami, Racid and Gravot, Fabien},
+   author = {St\'{e}phane Cambon and Racid Alami and Fabien Gravot},
    title = {A hybrid approach to intricate motion, manipulation and
       task planning},
-   journal = {The International Journal of Robotics Research},
+   journal = ijrr,
    volume = {28},
    number = {1},
    pages = {104-126},
@@ -400,13 +407,12 @@
 
 === Manual ===
 @inproceedings{choudhury2016pomp,
-   author = {Shushman Choudhury and Christopher M. Dellin
-      and Siddhartha S. Srinivasa},
+   author = {Shushman Choudhury and Christopher Dellin
+      and Siddhartha Srinivasa},
    title = {Pareto-Optimal Search Over Configuration Space Beliefs
       for Anytime Motion Planning},
    year = {2016},
-   booktitle = {2016 IEEE/RSJ International Conference on Intelligent
-      Robots and Systems},
+   booktitle = iros,
 }
 
 @inproceedings{cohen2014narms,
@@ -466,15 +472,14 @@
       and Siddhartha Srinivasa},
    title = {Guided Manipulation Planning at the
       {DARPA Robotics Challenge} Trials},
-   booktitle = {2014 International Symposium on
-      Experimental Robotics (ISER 2014)},
+   booktitle = {International Symposium on Experimental Robotics},
    month = jun,
    year = {2014},
 }
 
 === Manual (for now) ===
 @inproceedings{dellin2015cmr,
-   author = {Dellin, Christopher M. and Srinivasa, Siddhartha S.},
+   author = {Christopher Dellin and Siddhartha Srinivasa},
    booktitle = icra,
    title = {A General Technique for Fast Comprehensive
       Multi-Root Planning on Graphs by Coloring Vertices and
@@ -484,7 +489,7 @@
 
 === Manual (for now) ===
 @inproceedings{dellin2015multiset,
-   author = {Dellin, Christopher M. and Srinivasa, Siddhartha S.},
+   author = {Christopher Dellin and Siddhartha Srinivasa},
    title = {Reduce, Reuse, Recycle:
       Exploiting {C-space} Structure in Similar Problems
       with Multi-Set Planning},
@@ -532,10 +537,10 @@
 @phdthesis{diankov2010openrave,
    author = {Rosen Diankov},
    title = {Automated Construction of Robotic Manipulation Programs},
-   school = {Carnegie Mellon University, Robotics Institute},
-   month = aug,
+   school = {Robotics Institute, Carnegie Mellon University},
+   month = sep,
    year = {2010},
-   number = {CMU-RI-TR-10-29},
+   note = {CMU-RI-TR-10-29},
    url = {http://www.programmingvision.com/rosen_diankov_thesis.pdf},
 }
 
@@ -589,7 +594,7 @@
 
 === From IEEE Xplore ===
 @inproceedings{dragan2011goalsets,
-   author = {Dragan, A.D. and Ratliff, N.D. and Srinivasa, S.S.},
+   author = {Anca Draga and Nathan Ratliff and Siddhartha Srinivasa},
    booktitle = icra,
    title = {Manipulation planning with goal sets using constrained
       trajectory optimization},
@@ -700,7 +705,7 @@
 @inproceedings{ferguson2006drrt,
    author = {Ferguson, Dave and Kalra, N. and Stentz, A.},
    booktitle = icra,
-   title = {Replanning with RRTs},
+   title = {Replanning with {RRT}s},
    year = {2006},
    month = may,
    pages = {1243-1248},
@@ -716,7 +721,7 @@
    booktitle = {Robotics Research: Results of the 12th International
       Symposium ISRR},
    year = {2007},
-   publisher = {Springer Berlin Heidelberg},
+   publisher = {Springer},
    address = {Berlin, Heidelberg},
    pages = {239 -- 253},
    isbn = {978-3-540-48113-3},
@@ -800,9 +805,11 @@
 
 === From IEEE Xplore ===
 @inproceedings{gammell2014informedrrtstar,
-   author = {J. D. Gammell and S. S. Srinivasa and T. D. Barfoot},
-   title = {Informed RRT*: Optimal sampling-based path planning focused
-      via direct sampling of an admissible ellipsoidal heuristic},
+   author = {Jonathan Gammell and Siddhartha Srinivasa
+      and Timothy Barfoot},
+   title = {Informed {RRT}*: Optimal sampling-based path planning
+      focused via direct sampling of an admissible ellipsoidal
+      heuristic},
    year = {2014},
    month = sep,
    booktitle = iros,
@@ -813,7 +820,7 @@
 
 === Manual ===
 @inproceedings{gammell2015bitstar,
-   author = {Jonathan D. Gammell and Siddhartha S. Srinivasa
+   author = {Jonathan Gammell and Siddhartha Srinivasa
       and Timothy D. Barfoot},
    title = {Batch Informed Trees ({BIT*}): Sampling-based Optimal
       Planning via the Heuristically Guided Search of Implicit
@@ -827,9 +834,9 @@
 @inproceedings{garrett2014ffrob,
    author = {Caelan Reed Garrett and Tom\'{a}s Lozano-P\'{e}rez and
       Leslie Pack Kaelbling},
-   title = {FFRob: An efficient heuristic for task and motion planning},
-   booktitle = {International Workshop on the Algorithmic Foundations
-      of Robotics (WAFR)},
+   title = {{FFRob}: An efficient heuristic for task and motion
+      planning},
+   booktitle = wafr,
    year = {2014},
    url = {http://lis.csail.mit.edu/pubs/garrett-wafr14.pdf},
 }
@@ -838,8 +845,8 @@
 @inproceedings{gayle2007lazyreconfigforest,
    author  = {Gayle, Russell and Klingler, K.R. and Xavier, P.G.},
    booktitle = icra,
-   title = {Lazy Reconfiguration Forest (LRF) - An Approach for Motion
-      Planning with Multiple Tasks in Dynamic Environments},
+   title = {Lazy Reconfiguration Forest ({LRF}) - An Approach for
+      Motion Planning with Multiple Tasks in Dynamic Environments},
    year = {2007},
    month = apr,
    pages = {1316-1323},
@@ -922,19 +929,19 @@
 
 === From Springer website ===
 @incollection{gravot2005asymov,
-   author = {Gravot, Fabien and Cambon, Stephane and Alami, Rachid},
+   author = {Fabien Gravot and St\'{e}phane Cambon and Rachid Alami},
    title = {{aSyMov}: A Planner That Deals with Intricate Symbolic and
       Geometric Problems},
    year = {2005},
    isbn = {978-3-540-23214-8},
-   booktitle = {Robotics Research. The Eleventh International
-      Symposium},
+   booktitle = isrr,
    volume = {15},
    series = {Springer Tracts in Advanced Robotics},
    editor = {Dario, Paolo and Chatila, Raja},
    doi = {10.1007/11008941_11},
    url = {http://dx.doi.org/10.1007/11008941\_11},
-   publisher = {Springer Berlin Heidelberg},
+   publisher = {Springer},
+   address = {Berlin, Heidelberg},
    pages = {100-110},
    language = {English},
 }
@@ -942,7 +949,7 @@
 === From IEEE Xplore ===
 @article{hart1968astar,
    author = {Hart, P.E. and Nilsson, N.J. and Raphael, B.},
-   journal = {Systems Science and Cybernetics, IEEE Transactions on},
+   journal = {IEEE Transactions on Systems Science and Cybernetics},
    title = {A Formal Basis for the Heuristic Determination of Minimum
       Cost Paths},
    year = {1968},
@@ -1069,7 +1076,8 @@
 === From IEEE Xplore ===
 @inproceedings{hsu2005hybridsampling,
    author = {D. Hsu and G. Sanchez-Ante and Zheng Sun},
-   title = {Hybrid PRM Sampling with a Cost-Sensitive Adaptive Strategy},
+   title = {Hybrid {PRM} Sampling with a Cost-Sensitive Adaptive
+      Strategy},
    year = {2005},
    booktitle = icra,
    pages = {3874 -- 3880},
@@ -1124,7 +1132,7 @@
    author = {L\'{e}onard Jaillet and Josep M. Porta},
    title = {Path planning with loop closure constraints using an
       atlas-based {RRT}},
-   booktitle = {International Symposium on Robotics Research},
+   booktitle = isrr,
    year = {2011},
 }
 
@@ -1133,13 +1141,8 @@
    author = {Lucas Janson and Brian Ichter and Marco Pavone},
    title = {Deterministic Sampling-Based Motion Planning: Optimality,
       Complexity, and Performance},
-   journal = {CoRR},
-   volume = {abs/1505.00023},
+   journal = isrr,
    year = {2015},
-   url = {http://arxiv.org/abs/1505.00023},
-   timestamp = {Mon, 01 Jun 2015 14:13:54 +0200},
-   biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/JansonIP15},
-   bibsource = {dblp computer science bibliography, http://dblp.org},
 }
 
 === From sagepub ===
@@ -1161,7 +1164,7 @@
 === From IEEE Xplore ===
 @inproceedings{jiapan2012fcl,
    author = {Jia Pan and Chitta, S. and Manocha, D.},
-   title = {FCL: A general purpose library for collision and proximity
+   title = {{FCL}: A general purpose library for collision and proximity
       queries},
    booktitle = icra,
    year = {2012},
@@ -1271,7 +1274,7 @@
       Overmars, M.H.},
    title = {Probabilistic roadmaps for path planning in
       high-dimensional configuration spaces},
-   journal = {Robotics and Automation, IEEE Transactions on},
+   journal = {IEEE Transactions on Robotics and Automation},
    year = {1996},
    month = aug,
    volume = {12},
@@ -1465,18 +1468,17 @@
 
 === Manual ===
 @inproceedings{lavalle2002gridprms,
-   author = {S. M. La Valle and M. S. Branicky},
+   author = {Steven M. LaValle and Michael S. Branicky},
    title = {On the relationship between classical grid search
       and probabilistic roadmaps},
-   booktitle = {Proc. of the International Workshop on the
-      Algorithmic Foundations of Robotics (WAFR)},
+   booktitle = wafr,
    year = {2002},
 }
 
 === From sagepub (IJRR) ===
 @article{lavalle2004deterministic,
-   author = {LaValle, Steven M. and Branicky, Michael S.
-      and Lindemann, Stephen R.},
+   author = {Steven M. LaValle and Michael S. Branicky
+      and Stephen R. Lindemann},
    title = {On the Relationship between Classical Grid Search
       and Probabilistic Roadmaps},
    volume = {23},
@@ -1491,7 +1493,7 @@
 
 === From http://planning.cs.uiuc.edu/planning.bib ===
 @book{lavalle2006planningbook,
-   author = {S. M. LaValle},
+   author = {Steven M. LaValle},
    title = {Planning Algorithms},
    publisher = {Cambridge University Press},
    address = {Cambridge, U.K.},
@@ -1513,8 +1515,8 @@
 
 === From IEEE Xplore ===
 @inproceedings{leeper2012hitl,
-   author = {Leeper, A. and Hsiao, K. and Ciocarlie, M.
-      and Takayama, Leila and Gossow, D.},
+   author = {A. Leeper and K. Hsiao and M. Ciocarlie
+      and Leila Takayama and D. Gossow},
    booktitle = {Human-Robot Interaction (HRI), 2012 7th ACM/IEEE
       InternationalConference on},
    titl = {Strategies for human-in-the-loop robotic grasping},
@@ -1528,8 +1530,7 @@
 @inproceedings{leven2000changing,
    author = {Leven, Peter and Hutchinson, Seth},
    title = {Toward real-time path planning in changing environments},
-   booktitle = {Proceedings, Workshop on the Algorithmic Foundations of
-                Robotics (WAFR '00)},
+   booktitle = wafr,
    year = {2000},
 }
 
@@ -1545,7 +1546,7 @@
    doi = {10.1177/0278364902021012001},
    url = {http://ijr.sagepub.com/content/21/12/999.abstract},
    eprint = {http://ijr.sagepub.com/content/21/12/999.full.pdf+html},
-   journal = {The International Journal of Robotics Research},
+   journal = ijrr,
 }
 
 === Manual ===
@@ -1569,7 +1570,7 @@
       roadmap management},
    year = {2002},
    volume = {4},
-   pages = {3411-3416 vol.4},
+   pages = {3411--3416},
    doi = {10.1109/ROBOT.2002.1014238},
 }
 
@@ -1651,7 +1652,7 @@
 @article{lozanoperez1983cspace,
    author = {Lozano-P{\'e}rez, Tom\'{a}s},
    title = {Spatial Planning: A Configuration Space Approach},
-   journal = {Computers, IEEE Transactions on},
+   journal = {IEEE Transactions on Computers},
    year = {1983},
    month = feb,
    volume = {C-32},
@@ -1806,8 +1807,8 @@
 === From IEEE Xplore ===
 @article{pearl1982semiadmissible,
    author = {Pearl, J. and Kim, Jin H.},
-   journal = {Pattern Analysis and Machine Intelligence,
-      IEEE Transactions on},
+   journal = {IEEE Transactions on Pattern Analysis and Machine
+      Intelligence},
    title = {Studies in Semi-Admissible Heuristics},
    year = {1982},
    month = jul,
@@ -1865,11 +1866,11 @@
 }
 
 === Manual ===
-@inproceedings{plaku2010syclop,
+@article{plaku2010syclop,
    author = {Plaku, Erion and Kavraki, Lydia E. and Vardi, Moshe Y.},
    title = {Motion Planning with Dynamics by a Synergistic Combination
       of Layers of Planning},
-   journal = {Trans. Rob.},
+   journal = tro,
    volume = {26},
    number = {3},
    month = jun,
@@ -1967,8 +1968,8 @@
 
 === From IEEE Xplore ===
 @inproceedings{ratliff2009chomp,
-   author = {Ratliff, Nathan and Zucker, Matt and Bagnell, J. Andrew
-      and Srinivasa, Siddhartha},
+   author = {Nathan Ratliff and Matt Zucker and J. Andrew Bagnell,
+      and Siddhartha Srinivasa},
    booktitle = icra,
    title = {CHOMP: Gradient optimization techniques for efficient
       motion planning},
@@ -1984,7 +1985,7 @@
    author = {Raveh, B. and Enosh, A. and Halperin, D.},
    title = {A Little More, a Lot Better: Improving Path Quality by a
       Path-Merging Algorithm},
-   journal = {Robotics, IEEE Transactions on},
+   journal = tro,
    year = {2011},
    month = apr,
    volume = {27},
@@ -2064,7 +2065,7 @@
    author = {Salisbury, K. and Townsend, W. and Ebrman, B.
       and DiPietro, D.},
    title = {Preliminary design of a whole-arm manipulation system
-      (WAMS)},
+      ({WAMS})},
    booktitle = icra,
    year = {1988},
    month = apr,
@@ -2188,7 +2189,8 @@
 
 === From http://citeseerx.ist.psu.edu/ ===
 @article{simeon2000visibilityprms,
-   author = {T. Sim\'{e}on and J.P. Laumond and C. Nissoux},
+   author = {Thierry Sim\'{e}on and Jean-Paul Laumond and
+      Carole Nissoux},
    title = {Visibility-based probabilistic roadmaps for motion
       planning},
    journal = {Journal of Advanced Robotics},
@@ -2200,8 +2202,8 @@
 
 === From sagepub (IJRR) ===
 @article{simeon2004manipulation,
-   author = {Sim\'{e}on, Thierry and Laumond, Jean-Paul and
-             Cort\'{e}s, Juan and Sahbani, Anis},
+   author = {Thierry Sim\'{e}on and Jean-Paul Laumond and
+             Juan Cort\'{e}s and Anis Sahbani},
    title = {Manipulation Planning with Probabilistic Roadmaps},
    journal = {The International Journal of Robotics Research},
    volume = {23},
@@ -2229,10 +2231,10 @@
 
 === From IEEE Xplore ===
 @article{srinivasa2012herb20,
-   author = {Srinivasa, S.S. and Berenson, D. and Cakmak, M.
-      and Collet, A. and Dogar, M.R. and Dragan, A.D. and Knepper, R.A.
-      and Niemueller, T. and Strabala, K. and Vande Weghe, M.
-      and Ziegler, J.},
+   author = {Siddhartha Srinivasa and Dmitry Berenson and Maya Cakmak
+      and Alvaro Collet and Mehmet Dogar and Anca Dragan
+      and Ross Knepper and Tim Niemueller and Kyle Strabala
+      and Mike Vande Weghe and J. Ziegler},
    journal = {Proceedings of the IEEE},
    title = {{HERB} 2.0: Lessons Learned From Developing a Mobile
       Manipulator for the Home},
@@ -2305,8 +2307,10 @@
       and Valois, Jean-Sebastien and Vande Weghe, J. Michael
       and Wagner, Michael and Wellington, Carl},
    title = {{CHIMP}, the {CMU Highly Intelligent Mobile Platform}},
-   year = {2014},
-   journal = {Submitted},
+   year = {2015},
+   month = feb,
+   journal = {Journal of Field Robotics},
+   doi = {10.1002/rob.21569},
 }
 =journal = {Journal of Field Robotics,
 =   Special Issue on the DARPA Robotics Challenge}
@@ -2468,9 +2472,10 @@
 @article{zucker2013chomp,
    title = {{CHOMP}: Covariant Hamiltonian Optimization for Motion
       Planning},
-   author = {Zucker, M. and Ratliff, R. and Dragan, A.D.
-      and Pivtoraiko, M. and Klingensmith, M. and Dellin, C.
-      and Bagnell, J.A. and Srinivasa, S.S.},
+   author = {Matthew Zucker and Nathan Ratliff and Anca Dragan
+      and Mihail Pivtoraiko and Matthew Klingensmith
+      and Christopher Dellin and J. Andrew Bagnell
+      and Siddhartha Srinivasa},
    journal = {The International Journal of Robotics Research},
    volume = {32},
    number = {9--10},
