--- a/thesis-ch04-ibid.tex
+++ b/thesis-ch04-ibid.tex
@@ -652,7 +652,7 @@ obeys a complementary definition and local characterization as $d_s$,
 with vertex predecessors replaced with successors.
 Approaches such as edge relaxation (Section~\ref{subsec:ibid-tension})
 can therefore be used to calculate $d_t$ using a region around $t$
-within which shortests paths can be reconstructed.
+within which shortest paths can be reconstructed.
 
 Loosely speaking,
 the search can terminate with a shortest path
@@ -1460,7 +1460,7 @@ in the results of Figure~\ref{fig:ibid:road-ne-stats}.
 
 When examining how to assemble a heuristic-informed algorithm
 that integrates bidirectional with incremental methods,
-it's instructive to examine how these efforts have been addressed
+it is instructive to examine how these efforts have been addressed
 in the past.
 
 \paragraph{Review of Heuristic Methods.}
@@ -1808,7 +1808,7 @@ domains,
 the second component of $w_b$ is everywhere positive,
 and therefore $w_b > (0,0)$.
 
-\paragraph{Equivalence to Lifelong Planning A*}
+\paragraph{Equivalence to Lifelong Planning A*.}
 Our treatment of the transformed edge weight function $w_b$
 and the key function $k$ differs from the original presentation
 \citep{koenig2004lpastar}.
