--- a/thesis-ch05-lemur.tex
+++ b/thesis-ch05-lemur.tex
@@ -1304,5 +1304,5 @@ Planning estimates are always inaccurate.
 How to incorporate constants e.g. search time?
 Suppose it is inevitable that you're wrong about your planning estimate.
 Here ares some ways that we could fix it.
-Perhaps artificlaly inflate the per-batch search cost?
+Perhaps artificially inflate the per-batch search cost?
 }
