--- a/thesis-ch06-family-extra.tex
+++ b/thesis-ch06-family-extra.tex
@@ -38,7 +38,7 @@ are included together in the experimental results
 \section{Application: Caching Invariant Geometry}
 \label{subsec:family:cached-self-valid}
 
-\paragraph{Cached Self-Collision-Checked Roadmaps}
+\paragraph{Cached Self-Collision-Checked Roadmaps.}
 Self-collision checking is a potentially expensive component to
 articulated motion planning;
 in contrast to environment checking,
