--- a/thesis-ch07-conclusion.tex
+++ b/thesis-ch07-conclusion.tex
@@ -11,12 +11,12 @@ when compared with state-of-the-art
 search-based and sampling-based anytime planners.
 This concluding chapter begins by summarizing the dissertation
 and the individual algorithmic contributions
-in Section~\ref{sec:conclusion:summary},
-as well as some lessons learned
-in Section~\ref{sec:conclusion:lessons-learned}.
+in Section~\ref{sec:conclusion:summary}.
 This is followed by a discussion in Section~\ref{sec:conclusion:future}
 of a few promising avenues for future research
-which build on our results.
+which build on our results,
+as well as some lessons learned
+in Section~\ref{sec:conclusion:lessons-learned}.
 Finally, we offer some concluding remarks
 in Section~\ref{sec:conclusion:remarks}.
 
@@ -542,7 +542,7 @@ for particular problem instances
 may aid in designing new selectors.
 It also serves as a useful benchmark against which to compare performance.
 
-\paragraph{Exploring the Interaction between Lazy and Dynamic Search}
+\paragraph{Exploring the Interaction between Lazy and Dynamic Search.}
 Lazy search induces an inner dynamic shortest path problem,
 as edge weights are updated and intermediate candidate paths are
 required.
