--- a/thesis-ch01-intro.tex
+++ b/thesis-ch01-intro.tex
@@ -49,8 +49,7 @@ We begin by characterizing the challenges inherent in
 motion planning for manipulation tasks.
 We then detail a concerted set of insights which inform our approach.
 The result is a collection of complementary algorithms
-which together demonstrate that outperform
-the current state-of-the-art.
+which together outperform the current state-of-the-art.
 
 \section{Problem Characterization}
 
@@ -101,7 +100,7 @@ The robot must continually generate planned motions in partially
 changing environments.
 This is especially evident when planning for manipulation tasks,
 where each object grasp and placement changes the collision-free
-subset of configuration space.
+subset of the robot's configuration space.
 
 \begin{figure*}[t]
    \centering
@@ -177,7 +176,7 @@ for articulated robots
 which addresses these four challenges.
 We provide an outline of the thesis in Figure~\ref{fig:intro:outline}.
 
-\paragraph{\nameref{chap:roadmaps} (Chapter~\ref{chap:roadmaps})}
+\paragraph{\nameref{chap:roadmaps} (Chapter~\ref{chap:roadmaps}).}
 We begin by reviewing the definition of the motion planning problem
 in terms of the robot's configuration space.
 We examine several existing approaches from the literature,
@@ -191,7 +190,7 @@ with a particular choice of edge weight function.
 We also discuss the amenability of roadmap methods
 to caching and parallelization.
 
-\paragraph{\nameref{chap:lazysp} (Chapter~\ref{chap:lazysp})}
+\paragraph{\nameref{chap:lazysp} (Chapter~\ref{chap:lazysp}).}
 While roadmap methods effectively reduce the motion planning problem
 to one of graph search,
 the properties of the graph representation
@@ -212,7 +211,7 @@ and show equivalences with existing algorithms
 such as A* \citep{hart1968astar}
 and Lazy Weighted A* \citep{cohen2014narms}.
 
-\paragraph{\nameref{chap:ibid} (Chapter~\ref{chap:ibid})}
+\paragraph{\nameref{chap:ibid} (Chapter~\ref{chap:ibid}).}
 LazySP relies on an inner incremental search algorithm,
 such as DynamicSWSF-FP \citep{ramalingam1996dynamicswsffp}
 or Lifelong Planning A* \citep{koenig2004lpastar},
@@ -226,30 +225,30 @@ IBiD,
 which combines bidirectional, heuristic, and incremental search
 into a single generalized algorithm.
 
-\paragraph{\nameref{chap:utility} (Chapter~\ref{chap:utility})}
+\paragraph{\nameref{chap:utility} (Chapter~\ref{chap:utility}).}
 Motion tasks expose a fundamental tradeoff between planning and
 execution cost.
 We show how conventional motion objective models
 can be augmented to include a planning cost term,
 and how such terms can be combined into a single measure of
 \emph{utility},
-which we can optimize explicitly
-via particular weight/estimator functions using LazySP.
+which we can then optimize explicitly
+via particular weight and estimator functions using LazySP.
 The resulting algorithm,
 \emph{Lazily Evaluated Marginal Utility Roadmaps (LEMUR)},
 demonstrates improved performance across a range of motion planning
 queries
 when compared to state-of-the-art planners.
 
-\paragraph{\nameref{chap:family} (Chapter~\ref{chap:family})}
+\paragraph{\nameref{chap:family} (Chapter~\ref{chap:family}).}
 While utility maximization shows benefits in single-query settings,
 many motion tasks (such as manipulation problems)
 comprise multiple queries in a family of related configuration space
 subsets.
 We show how such problems can be formulated naturally via
 augmented cost models with custom planning cost components.
-We demonstrate improved performance in applications such as
-cached checks and multi-step problems.
+We demonstrate improved performance in multi-step problem
+applications.
 
 %Approach limitations: don't consider constraints,
 %interleaved planning and execution, etc.
@@ -286,14 +285,15 @@ cached checks and multi-step problems.
          %LEMUR over a family of C-space subsets \\
       \bottomrule
    \end{tabular}}
-   \caption[][0.5cm]{Table of four computational problems and
+   \vspace{0.2cm}
+   \caption[][0.4cm]{Table of four computational problems and
       the respective algorithms developed in this dissertation.}
    \label{table:intro:table-of-algorithms}
 \end{table*}
 
 We summarize the contributions of this dissertation here.
 A table of the developed algorithms is presented in
-Table~\ref{table:intro:table-of-algorithms}
+Table~\ref{table:intro:table-of-algorithms}.
 
 \begin{itemize}
 \item The LazySP pathfinding algorithm for graphs with expensive
@@ -302,8 +302,8 @@ Table~\ref{table:intro:table-of-algorithms}
 \item The IBiD bidirectional, heuristic, incremental search algorithm.
 \item The LEMUR algorithm for maximizing utility
    in motion planning problems.
-\item Formulation of the C-space family motion planning problem,
-   and application of LEMUR to it.
+\item A formulation of the C-space family motion planning problem,
+   and an application of LEMUR to this formulation.
 \item An experimental evaluation of the above algorithms against a
    selection of motion planning problems drawn from manipulation tasks.
 \item Open-source implementations\footnote[][1cm]{\texttt{%
