add funding acknowledgement

--- a/thesis-acknowledgements.tex
+++ b/thesis-acknowledgements.tex
@@ -2,6 +2,10 @@
 \begin{fullwidth}
 \begin{adjustwidth}{1in}{1in}
 
+\vphantom{.}
+
+\vspace{0.2in}
+
 {\LARGE \emph{Acknowledgements}}
 
 \vspace{0.2in}
@@ -59,6 +63,14 @@ or a more dedicated partner.
 Thank you for giving me your enthusiastic support
 and your insightful advice.
 I certainly could not have finished without you!
+
+\vspace{3.5cm} 
+
+\noindent
+This dissertation would not have been possible without funding from
+National Science Foundation IIS (\#1409003),
+Toyota Motor Engineering \& Manufacturing (TEMA),
+and the Office of Naval Research.
 
 \end{adjustwidth}
 \end{fullwidth}
